--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
             align-items: center;
             gap: 300px;
-            background-color: blue;
+            background-color: rgb(0, 0, 0);
         }
 
         .navbar1{
