--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     </div>
     <div class="footer">
         <h1>Hlieb Vyshar</h1>
-        <a href=https://www.ekstraklasa.org/"">Strona Ekstraklasy</a>
+        <a href=https://www.ekstraklasa.org/>Strona Ekstraklasy</a>
         <a href="formularz.html">Formularz</a>
     </div>
     
